manifests/cert-manager/whoami.yaml
# file: ~/cert-manager/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  # type: LoadBalancer
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
